[package]
name = "google-jwt-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
jsonwebtoken = "9.0.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.49"

[dev-dependencies]
tokio = {version = "1.29.0", features = ["full"]}