[package]
name = "google-jwt-auth"
description = "Generate authentication tokens for Google api requests"
version = "0.0.1"
edition = "2021"
license = "MIT"
documentation = ""
homepage = ""
repository = "https://github.com/kronos-et-al/google-jwt-auth"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
chrono = "0.4.31"
jsonwebtoken = "9.0.0"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0.49"

[dev-dependencies]
tokio = {version = "1.29.0", features = ["full"]}